Preliminary support to drag task lists in the sidebar

--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -2,6 +2,7 @@
   = new_task_list_link(project)
   %h2.title_with_button
     =link_to 'Task Lists', project_task_lists_path(project)
-  .task_lists  
+  #task_lists
     = list_task_lists(project,task_lists,current_target)
-  =comments_settings
+  = sortable_element :task_lists, :tag => 'div', :url => { :action => 'reorder' }, :complete => "alert(request.responseText)"
+  = comments_settings
