--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -69,5 +69,5 @@ form.task_form_wrap
           :bottom solid 1px rgb(150,150,150)
           :right solid 1px rgb(90,90,90)
 
-.task_lists
+#task_lists
   :clear both
