adjusted styling for activities

--- a/app/views/activities/_page_add.haml
+++ b/app/views/activities/_page_add.haml
@@ -2,7 +2,7 @@
   =image_tag('activity_page.jpg')
   %span.name= link_to activity.target.user.name, user_path(activity.target.user)
   %span
-    created a new conversation
+    created a new page
   %span.target= edit_page_link(activity.project,activity.target)
   .date= posted_date activity.target.created_at
   .clear  
