--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -68,6 +68,13 @@ form.edit_comment
         :vertical-align middle
       span
         :vertical-align middle
+  span.author, span.project
+    :color rgb(120,120,120)
+    a
+      :color rgb(80,80,80)
+      :font-weight normal
+  span.arr
+    :color rgb(140,140,140)
   .block
     :width 530px
     :float right
