--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -4,5 +4,5 @@
     =link_to 'Task Lists', project_task_lists_path(project)
   #task_lists
     = list_task_lists(project,task_lists,current_target)
-  = sortable_element :task_lists, :tag => 'div', :url => { :action => 'reorder' }, :complete => "alert(request.responseText)"
+  = #sortable_element :task_lists, :tag => 'div', :url => { :action => 'reorder' }, :complete => "alert(request.responseText)"
   = comments_settings
