styled  comments, started code for drop down. hide time tracking

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -2,7 +2,7 @@
   .info
     =comment_actions_link(comment)
     =thumb_avatar(comment.user)
-    - unless comment.hours.nil?
+    - if false ##unless comment.hours.nil?
       .hours
         =hour_image
         %span
