--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -1,4 +1,8 @@
 form#new_comment, form.edit_comment
+  :padding 5px
+  :-moz-border-radius 8px
+  :-webkit-border-radius 8px
+  :background rgb(230,230,230)
   .hours
     label
       :display inline
@@ -7,7 +11,7 @@ form#new_comment, form.edit_comment
   .body
     :padding 5px
     textarea
-      :width 595px
+      :width 578px
       :height 80px
   .submit
     :margin-top 3px
@@ -54,7 +58,7 @@ form.edit_comment
       :display block
       :width 16px
       :height 40px
-  .info
+  .info  
     :width 80px
     :float left
     .thumb_avatar
@@ -80,8 +84,8 @@ form.edit_comment
     :float right
     .name
       :font-size 12px
-      :border-bottom solid 1px rgb(235,235,235)
       :margin-bottom 5px
+      :border-bottom solid 1px rgb(235,235,235)      
       a
         :font-size 12px
         :font-weight bold
@@ -96,7 +100,7 @@ form.edit_comment
         :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
         :line-height 1.3em
         :margin 2px 0 10px
-
+    .clear
 .comment_hover
   .block
     .name
