--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -1,11 +1,6 @@
 = hidden_field_tag :original_controller, controller_name
-
 .body.text_area
   = f.text_area :body
-- unless show_hours == false
-  %a.add_hours{:onclick => "this.hide();this.next('.hours').show();", |
-    :style => (f.object.hours.nil? ? '' : 'display: none;') }
-    + Hours
-  .hours.text_field{:style => (f.object.hours.nil? ? 'display: none;' : '')}
-    = f.label :hours
-    = f.text_field :hours
+
+=# add_hours_link(f) if show_hours
+= comment_upload_link(comment)
