--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -1,11 +1,14 @@
-<div class="navigation"><%  
+<div class="navigation">
+
+<%  
 
 if logged_in?
   render_tabnav :main, :generate_css => false do 
     add_tab do |t|
-      t.named t('.all_projects')
+      t.named "#{t('.all_projects')}"
       t.links_to projects_path
       t.highlights_on :controller => :projects, :action => :index
+      #t.li_end "#{render :partial => 'shared/projects_dropdown'}"
     end
 
     add_tab do |t|
