--- a/app/views/uploads/_link.haml
+++ b/app/views/uploads/_link.haml
@@ -1,6 +1,6 @@
-= link_to_function t('uploads.upload_a_file_link'), show_upload_form(comment), :class => 'add_upload'
+= link_to_function image_tag('attach_button.jpg'), show_upload_form(comment)
 .uploads_save{:style => 'display: none;'}
 .uploads_current{:style => (comment.uploads.count > 0 ? '' : 'display: none;')}
   - if comment.uploads.count > 0
     = list_uploads_edit(comment.uploads,comment)
-  %br
+  .clear
