--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -8,34 +8,22 @@ div.task_list_wrap
   div.task_list
     a
       :font-size 12px
-  p.actions
-    :position relative
-    :margin 0px
-    :line-height 1em
-    :font-size 1em
-    span
-      :line-height 1em
-      :background rgb(230,230,230)
-      :padding 4px 0px
-        :left 2px
-        :bottom 0px
-      :overflow auto
-      :position absolute
-      :display block
-      :width 45px
-      :height 20px
-      :left -46px
-      :top 2px
-
 div.task
   a
     :font-size 12px
+
+div.task_list, div.task
   p.actions
     :position relative
     :margin 0px
     :line-height 1em
     :font-size 1em
     span
+      :-moz-border-radius
+        :topleft 5px
+        :bottomleft 5px
+      :-webkit-border-top-left-radius 5px
+      :-webkit-border-bottom-left-radius 5px
       :line-height 1em
       :background rgb(230,230,230)
       :padding 4px 0px
@@ -44,9 +32,9 @@ div.task
       :overflow auto
       :position absolute
       :display block
-      :width 45px
+      :width 20px
       :height 20px
-      :left -45px
+      :left -22px
       :top 2px
     
 a.add_task_link
