styled upload button for comments box

--- a/app/views/activities/_tasklist_add.haml
+++ b/app/views/activities/_tasklist_add.haml
@@ -1,5 +1,5 @@
 .activity_action.activity_tasklist_add
-  =image_tag('activity_tasklist_add.jpg')
+  =image_tag('activity_tasklist.jpg')
   %span.name= link_to activity.target.user.name, user_path(activity.target.user)
   %span
     added a task list
