--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -103,3 +103,15 @@ a.button
       :right 10px
     :font-weight bold
     :background url(../images/button_wrap_bg.jpg) no-repeat right    
+    
+a.attach_button
+  :background url(../images/attach_button_bg.jpg) no-repeat left
+  :font-size 12px
+  :padding 5px
+    :left 20px
+  span
+    :color rgb(40,40,40)
+    :padding 5px
+      :right 10px
+    :font-weight bold
+    :background url(../images/button_wrap_bg.jpg) no-repeat right    
