styled comment submit button

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -22,23 +22,14 @@ form#new_comment, form.edit_comment
     :font-size 12px
     &:hover
       :text-decoration none
-      
-form.edit_comment
-  :background rgb(245,245,245)
-  :padding 5px
-  .hours
-    label
-      :display inline
+  div.submit
     input
-      :width 3em
-  .body
-    textarea
-      :width 575px
-  .submit
-    :float right
-    :width 130px
-    :padding 5px
-      :right 8px
+      :border none
+      :background url('../images/comment_submit_button.jpg') no-repeat
+      :width 125px
+      :height 30px
+      :font-size 16px
+      :font-weight bold
   
 .comment
   :margin 0px
