added activity icon to comments for activties

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -38,12 +38,17 @@ form#new_comment, form.edit_comment
   &:hover
     p.actions
       :visibility visible
+  p.activity_icon
+    :position relative
+    img
+      :overflow auto
+      :position absolute
+      :display block      
   p.actions
     :visibility hidden
     :position relative
     :margin 0px
     span
-      :padding 6px 0px
       :overflow auto
       :position absolute
       :display block
