--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,5 +1,6 @@
 .comment{:id => "comment_#{comment.id}" }
   .info
+    =activity_comment_icon(comment)
     =comment_actions_link(comment)
     =thumb_avatar(comment.user)
     - if false ##unless comment.hours.nil?
