styled unread, and total comments

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -103,3 +103,26 @@ form#new_comment, form.edit_comment
       :border-bottom solid 1px rgb(200,200,200)
     .date
       :color rgb(0,0,0)
+      
+      
+      
+span.count
+  :-moz-border-radius 4px
+  :-webkit-border-radius 4px
+  :background rgb(160,160,160)
+  :color rgb(255,255,255)    
+  :text-align center
+  :font-size 10px    
+  :line-height 1em
+  :padding 2px 0px
+  :margin-right 4px
+  span.total   
+    :padding 2px 4px
+      :right 2px
+  span.unread
+    :padding 2px 4px
+      :right 2px
+    :background rgb(30,30,255)
+    :color rgb(255,255,255)
+    :-moz-border-radius 4px
+    :-webkit-border-radius 4px      
