refactored unread comments

--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,7 +1,7 @@
 .task_list_wrap{ :id => "task_list_#{task_list.id}" }
   .task_list{ :class => "#{ 'active_task_list' if current_target == task_list }" }
     =task_list_action_links(project,task_list)
-    = unread_comment_count(task_list)
+    =show_comments_count(task_list)
     = task_list_link(task_list)
   .tasks{ :id => "project_#{project.id}_task_list_#{task_list.id}" }
     = list_tasks(project,task_list,task_list.tasks,current_target)
