--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -6,6 +6,8 @@
   :-webkit-border-top-right-radius 5px
   
 div.global_navigation
+  :-moz-border-radius 4px
+  :-webkit-border-radius 4px
   :background rgb(76,74,74)
   :float right
   :padding 5px
