--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -26,7 +26,6 @@ div.active_page
     :-moz-border-radius 8px
     :-webkit-border-radius 8px
   .note
-    :border-bottom 1px solid rgb(230,230,230)
     :padding-bottom 5px
     :margin 5px 0px
     p.actions
@@ -59,3 +58,4 @@ div.active_page
         :width 100%
     .submit
       :font-size 12px
+      :padding-top 10px
