--- a/app/views/notes/_edit.haml
+++ b/app/views/notes/_edit.haml
@@ -1,6 +1,7 @@
-- remote_form_for [note.project,note.page,note] do |f|
+- remote_form_for [note.project,note.page,note], :loading => show_loading_note_form(note.id) do |f|
   = note_fields(f)
-  .submit
+  .submit{ :id => "note_submit_#{note.id}" }
     = f.submit t('.submit')
     or
-    = link_to_function 'Cancel', ''
+    = link_to_function 'Cancel', remove_form("note_#{note.id}")
+  =loading('note_form',note.id)
