--- a/app/views/notes/_new.haml
+++ b/app/views/notes/_new.haml
@@ -1,6 +1,7 @@
-- remote_form_for [project,page,note], :html => { :id => "new_note_form_#{unique_id}" } do |f|
+- remote_form_for [project,page,note], :loading => show_loading_note_form, :html => { :id => "new_note_form", :style => 'display: none' } do |f|
   = note_fields(f)
-  .submit
+  .submit{ :id => "note_submit" }
     = f.submit t('.submit')
     or
-    = link_to_function 'Cancel', ''
+    = link_to_function 'Cancel', inline_hide_note_form
+  =loading('note_form')
