--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -4,10 +4,12 @@
   = @page.name
 
 .buttons#buttons
-  = add_note_link(@current_project,@page)
-  =link_to '<span>Divider</span>', '', :class => 'button'
-  =link_to '<span>Task List</span>', '', :class => 'button'
-  =link_to '<span>File</span>', '', :class => 'button'
+  =new_page_note_link(@current_project,@page)
+  =new_page_divider_link(@current_project,@page)
+  =new_page_task_list_link(@current_project,@page)
+  =new_page_upload_link(@current_project,@page)
 
+=new_note_form(@current_project,@page)
+  
 #notes
   = list_page_notes(@page.notes)
