--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -91,6 +91,18 @@ div.column_wrap
     a.active
       :background rgb(0,0,255)
       :color rgb(255,255,255)
+
+a.loading_button
+  :background url(../images/loading_button_bg.gif) no-repeat left
+  :font-size 12px
+  :padding 5px
+    :left 20px
+  span
+    :color rgb(0,0,40)
+    :padding 5px
+      :right 10px
+    :font-weight bold
+    :background url(../images/loading_button_wrap_bg.jpg) no-repeat right
       
 a.button
   :background url(../images/button_bg.jpg) no-repeat left
@@ -102,7 +114,7 @@ a.button
     :padding 5px
       :right 10px
     :font-weight bold
-    :background url(../images/button_wrap_bg.jpg) no-repeat right    
+    :background url(../images/button_wrap_bg.jpg) no-repeat right
     
 a.attach_button
   :background url(../images/attach_button_bg.jpg) no-repeat left
