--- a/app/views/notes/_fields.haml
+++ b/app/views/notes/_fields.haml
@@ -1,6 +1,6 @@
 .name.text_field
   = f.label :name, 'Title'
-  = f.text_field :name
+  = f.text_field :name, :class => 'focus'
 .body.text_area
   = f.label :body
   = f.text_area :body
