--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -125,4 +125,7 @@ span.count
     :background rgb(30,30,255)
     :color rgb(255,255,255)
     :-moz-border-radius 4px
-    :-webkit-border-radius 4px      
+    :-webkit-border-radius 4px
+
+span.unread_comments
+  :color blue
