--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -10,7 +10,8 @@
       :margin 0
       :padding 0
   .people
-    .user
+    .person
+      :clear both
       :display block
       :font-size 12px
       :border 0px rgb(200,200,200) dashed
