--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -33,4 +33,14 @@
     :font-size 12px
     :padding-left 25px
     :background url(/images/feed.png) no-repeat left
-    
+
+.pending_projects
+  .project
+    :border-bottom 1px solid rgb(230,230,230)
+    :padding-bottom 5px
+    :margin-bottom 5px
+    .name
+      :font-weight bold
+
+    form.accept_project, form.decline_project
+      :display inline
