--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -27,6 +27,9 @@
     :text-align right
     :padding-right 10px
     :vertical-align middle
+  #change_password_link a
+    :margin-left 130px
+    :font-size 12px
   .submit
     :margin 15px 0px 0px 300px
 
