--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -12,7 +12,11 @@ e:compact
 @import comments.sass
 @import conversations.sass
 @import tasks.sass
+
 @import pages.sass
+@import pages/notes.sass
+@import pages/dividers.sass
+
 @import people.sass
 @import time_tracking.sass
 @import invoices.sass
