--- a/app/views/tasks/_new.haml
+++ b/app/views/tasks/_new.haml
@@ -1,4 +1,4 @@
-- remote_form_for [project,task_list,task], :html => { :id => "project_#{project.id}_task_list_#{task_list.id}_new_task", :class => 'task_form_wrap', :style => 'display: none' } do |f|
+- remote_form_for [project,task_list,task], :html => { :id => "project_#{project.id}_task_list_#{task_list.id}_new_task_form", :class => 'task_form_wrap', :style => 'display: none; margin-top: 5px' } do |f|
   .task_form
     = task_fields(f)
     .submit
