--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -1,11 +1,10 @@
 =task_list_column(@current_project,@task_lists,@task)
-  
-%h2.title
-  Comment on
-  =@task.name
 
-=link_to trash_image, project_task_list_task_path(@current_project,@task.task_list,@task), :confirm => 'Are you sure you want to delete this task?', :method => :delete
-=link_to_function pencil_image, show_edit_task(@current_project,@task.task_list,@task)
+.task_title  
+  =task_action_links(@current_project,@task_lists,@task)
+  %h2.title
+    Comment on
+    =@task.name
   
 = new_comment_form(@current_project,@task)
 
