New Project link in the .project_list Aligning projects and distinguishing between read comments and unread comments.

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -9,5 +9,6 @@
   .project_list
     %h2= t '.projects'
     = list_projects(@projects)
+    = new_project_link
   .subscribe
     = link_to t('.subscribe')
