--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -21,11 +21,14 @@
       :display none
   
 .project_list
+  :font-size 12px
   .project_link
-    :font-size 12px
     .unread_comment_count
       :float right
       :font-weight normal
+  .new_project_link
+    a
+      :color rgb(150,150,150)
 
 .subscribe
   :margin-top 15px
