--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,3 +1,21 @@
+.show_projects, .index_task_lists
+  #activities
+    .comment
+      .name
+        .author
+        .project, .project_arr
+          :display none
+        .target, .target_arr
+
+.index_conversations, .show_conversations, .show_tasks
+  .comment
+    .name
+      .author
+      .project, .project_arr
+        :display none
+      .target, .target_arr
+        :display none
+
 .new_project,.edit_project
   :padding 30px
 
