--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -16,8 +16,41 @@
       .target, .target_arr
         :display none
 
-.new_project,.edit_project
-  :padding 30px
+.new_projects
+  .content 
+    h2, form
+      :margin-left 20px
+    form
+      :margin-bottom 20px
+  .column
+    :font-size 12px
+    p
+      :margin 0 0 5px 0
+    ul
+      :padding-left 20px
+      :margin-top 5px
+      li
+        :margin-bottom 3px
+
+form#new_project, form.edit_project
+  :border 1px solid rgb(220,220,220)
+  :padding 10px
+  :background rgb(240,240,240)
+  .text_field
+    :margin-bottom 10px
+    .label
+      :display block
+      :margin-bottom 5px
+      label
+        :display inline
+      .description
+        :display inline
+        :font-size 10px
+        :font-style italic
+  #project_name
+    :width 272px
+  #project_permalink
+    :width 140px
 
 .people_list
   .person
