--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -53,10 +53,11 @@ form#new_project, form.edit_project
     :width 140px
 
 .people_list
-  .person
+  .person, .invite_people
     :font-size 12px
     :margin-left 10px
     :padding-left 15px
+  .person
     :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
   a
     :color rgb(80,80,80)
