commits I dont plan on keeping

--- a/app/views/shared/_global_navigation.erb
+++ b/app/views/shared/_global_navigation.erb
@@ -2,6 +2,14 @@
 render_tabnav :global, :generate_css => false do 
 
   if logged_in?
+    #unless current_user.invitations_count == 0
+    #  add_tab do |t|
+    #    t.named "#{current_user.invitations_count} #{t('.project_invitations')}"
+    #    t.links_to user_invitations_path(current_user)
+    #    t.highlights_on :controller => :invitations
+    #  end
+    #end
+    
     add_tab do |t|
       t.named "#{current_user.name}"
       t.links_to user_path(current_user)
