Basic XML and JSON view for Project#index and Project#show

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -11,4 +11,4 @@
     = list_projects(@projects)
     = new_project_link
   .subscribe
-    = link_to t('.subscribe')
+    = link_to t('.subscribe'), projects_path(:format => :rss)
