--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,9 +1,9 @@
 - content_for :column do
   .people_list
-    %h2= t 'projects.show.people_in_project'
+    %h2= t '.people_in_project'
     = list_people_statuses(@current_project.users)
     .invite_people
-      = link_to 'Invite people...', project_people_path(@current_project)
+      = link_to t('.invite_people'), project_people_path(@current_project)
   .subscribe
     = link_to t('.subscribe'), project_path(@current_project, :format => :rss)
 
