--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -73,3 +73,6 @@ div.upload_avatar
       :background url(/images/avatar_thumb_corners.png)
     &.round_corners:hover
       :background url(/images/avatar_thumb_corners_hover.png)
+
+.invitations
+  :padding 5px
