Changing font-family to Lucida Grande by default. Starting primer for Conversations

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -6,6 +6,7 @@ e:compact
 @import footer.sass
 @import forms.sass
 @import flash_box.sass
+@import primers.sass
 
 @import projects.sass
 @import activities.sass
