--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -93,7 +93,7 @@ form#new_comment, form.edit_comment
       :font-size 12px
       :color rgb(60,60,60)
       p
-        :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
+        :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
         :line-height 1.3em
         :margin 2px 0 10px
     .clear
