--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -10,7 +10,7 @@
   input
     :font-size 16px
     :padding 5px
-    :font-family "Helvetica Neue", Helvetica, Arial, sans-serif
+    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
     :border
       :top solid 1px rgb(196,196,196)
       :left solid 1px rgb(233,233,233)
@@ -27,7 +27,7 @@
   textarea
     :font-size 16px
     :padding 5px
-    :font-family "Helvetica Neue", Helvetica, Arial, sans-serif
+    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
     :border
       :top solid 1px rgb(196,196,196)
       :left solid 1px rgb(233,233,233)
