--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -45,7 +45,7 @@
   :height 30px
   :overflow none
   :background white
-  :font-family Verdana, Arial, sans-serif
+  :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
   form
     .file, .description
       :font-size 12px
