--- a/public/stylesheets/sass/primers.sass
+++ b/public/stylesheets/sass/primers.sass
@@ -1,8 +1,23 @@
 #primer
-  h2
-    :margin-top 5px
-    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
+  :padding 10px 0 10px
   p
     :font-size  12px
-    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
-  :padding-bottom 10px
+    :margin
+      :left 10px
+      :bottom 10px
+  .box
+    :display block
+    :background-color rgb(255,255,200)
+    :margin 10px
+    :padding 10px
+    :border 1px rgb(220,220,150) solid
+    h2
+      :margin-top 5px
+      :text-align center
+      a
+        :color rgb(0,0,150)
+        :text-decoration underline
+    ul
+      li
+        :font-size 12px
+        :margin-bottom 3px
