--- a/public/stylesheets/sass/primers.sass
+++ b/public/stylesheets/sass/primers.sass
@@ -18,6 +18,7 @@
         :color rgb(0,0,150)
         :text-decoration underline
     ul
+      :margin 5px 0 10px 0
       li
         :font-size 12px
-        :margin-bottom 3px
+        :margin-bottom 5px
