--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,9 +1,21 @@
 - content_for :column do
   = add_upload_link
   
-#uploads
-  - if @uploads.empty?
-    There are no files uploaded for this project.
-  - else
+
+- unless @uploads.empty?
+  #uploads
     =list_uploads(@current_project,@uploads)
-.clear
+  .clear
+  
+- else
+  #primer
+    %p= t('.primer.empty')
+    .box
+      %h2= link_to t('.primer.create_first'), new_project_task_list_path(@current_project)
+      %p= t '.primer.define1'
+      %p= t '.primer.define2'
+      %ul
+        %li= t '.primer.item1'
+        %li= t '.primer.item2'
+        %li= t '.primer.item3'
+  
