Show unread comment marker on individual comments Fixing some bugs in the CommentRead code

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -10,6 +10,9 @@
           =comment.hours
           hr
   .block
+    - if CommentRead.user(current_user).unread?(comment)
+      .unread
+        •
     .date
       = posted_date comment.created_at
     .name
