Uploads will be displayed as a list if at least one is not an image. Uploads will be displayed as a thumbnail box if all are images. Comments will display their attachments in the activity line. Uploads not assigned to a comment will be displayed in the activity line.

--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -1,4 +1,4 @@
-.upload_wrap{:id => "upload_#{upload.id}"}
+.upload_wrap{:id => "upload_#{upload.id}", :style => 'display:block'}
   = upload_actions_links(upload)
   .upload
     = file_icon_image(upload,'48px')
