added my custom plugins, tabnav, weakling, fyi

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -1,6 +1,5 @@
 .footer
   %p
-  =link_to image_tag('footer_logo.jpg'), 'http://teambox.com'
   %span
     &copy; 2009
-    Teambox
+  =link_to 'Teambox', 'http://teambox.com'
