--- a/app/views/shared/_global_navigation.erb
+++ b/app/views/shared/_global_navigation.erb
@@ -1,5 +1,5 @@
 <div class="global_navigation"><%  
-render_tabnav :global, :generate_css => false do 
+render_tabnav :global do 
 
   if logged_in?
     #unless current_user.invitations_count == 0
