--- a/app/views/shared/_project_navigation.erb
+++ b/app/views/shared/_project_navigation.erb
@@ -1,5 +1,5 @@
 <div class="project_navigation"><%  
-render_tabnav :project, :generate_css => false do 
+render_tabnav :project do 
 
   if logged_in?
     if project.nil?
