--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -1,6 +1,7 @@
 .login.text_field
   = f.label :login, t('.login')
   = f.text_field :login
+  = tooltip 'user_login', "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
 .name.text_field
   = f.label :name, t('.name')
   = f.text_field :name
@@ -14,6 +15,7 @@
   .password.text_field
     = f.label :password
     = f.password_field :password
+    = password_strength :password_strength, 'user_password'
   .password.text_field
     = f.label :password_confirmation, 'Confirm Password'
     = f.password_field :password_confirmation
