show welcome page

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -7,6 +7,7 @@ e:compact
 @import forms.sass
 @import flash_box.sass
 @import primers.sass
+@import welcome.sass
 
 @import projects.sass
 @import activities.sass
