--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -1,11 +1,8 @@
 div.wrapper 
   :clear both
   :background rgb(255,255,255)
-  :-moz-border-radius
-    :bottomleft 5px
-    :bottomright 5px
-  :-webkit-border-bottom-left-radius 5px
-  :-webkit-border-bottom-right-radius 5px
+  :-moz-border-radius 5px
+  :-webkit-border-radius 5px
 div.content_wrap
   :float left
   :width 610px
