--- a/app/views/shared/_global_navigation.erb
+++ b/app/views/shared/_global_navigation.erb
@@ -32,6 +32,10 @@ render_tabnav :global, :generate_css => false do
       t.links_to 'http://www.teambox.com/'
     end
     add_tab do |t|
+      t.named t('.help')
+      t.links_to 'http://help.teambox.com/'
+    end
+    add_tab do |t|
       t.named t('.blog')
       t.links_to 'http://www.teambox.com/blog/'
     end
