Header for Project#index

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -1,6 +1,9 @@
 - if @pending_projects
   .pending_projects
     = list_pending_projects(@pending_projects)
+
+%h2
+  News feed for all your projects
     
 #activities
   = list_activities(@activities)
