--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,3 +1,8 @@
+.index_projects
+  .content
+    h2
+      :margin 5px 0 0 20px
+
 .show_projects, .index_task_lists
   #activities
     .comment
@@ -73,6 +78,7 @@ form#new_project, form.edit_project
       :display none
   
 .project_list
+  :margin-top 15px
   :font-size 12px
   .project_link
     .unread_comment_count
