Styles for new page

--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -1,13 +1,18 @@
 div.active_page
   :background rgb(255,255,0)
       
-      
 .pages
   :clear both
   :margin-top 10px
   div.page
     a
       :font-size 12px
+
+.new_pages
+  h2, form
+    :margin-left 20px
+  form
+    :padding-bottom 20px
 
 .show_pages
   h2
