Flash box is now integrated in the header, which doesn't move the whole page down. If the message is too long, it will go into its own line. between header and project navigation.

--- a/public/stylesheets/sass/flash_box.sass
+++ b/public/stylesheets/sass/flash_box.sass
@@ -1,22 +1,27 @@
 .flash_box
-  :padding 10px
-  :font-size 18px
+  :float left
+  :padding 3px
+    :left 10px
+    :right 10px
+  :font-size 14px
   :background rgb(255,255,255)
-  :border-bottom solid 5px rgb(155,155,155)
   :color rgb(0,0,0)
-  :font-weight bold
+  :font-weight normal
+  :margin
+    :left 20px
+    :top 11px
+    :bottom 9px
   div
-    :width 960px
     :margin 0px auto
 .flash_error
   :background rgb(255,100,100)
-  :border-bottom solid 5px rgb(155,50,50)
+  :border solid 1px rgb(155,50,50)
   :color rgb(50,0,0)
 .flash_success
   :background rgb(100,255,100)
-  :border-bottom solid 5px rgb(50,155,50)
+  :border solid 1px rgb(50,155,50)
   :color rgb(0,50,0)
 .flash_notice
   :background rgb(255,255,100)
-  :border-bottom solid 5px rgb(155,155,50)
+  :border solid 1px rgb(155,155,50)
   :color rgb(50,50,0)
