--- a/app/views/users/welcome.haml
+++ b/app/views/users/welcome.haml
@@ -1,7 +1,7 @@
 .section.welcome_section
-  %h2.welcome Welcome to Teambox!
+  %h2.welcome Get started with Teambox!
   %p
-    Thanks for signing up for Teambox! We've got a surprise for you
+    Thanks for signing up for Teambox! We've got a surprise for you...
 .section    
   %h2 Projects
   %p
