Create your first project primer

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -1,12 +1,29 @@
-- if @pending_projects
-  .pending_projects
-    = list_pending_projects(@pending_projects)
+- if not @pending_projects.empty? or not @activities.empty?
+  - if @pending_projects
+    .pending_projects
+      = list_pending_projects(@pending_projects)
 
-%h2
-  News feed for all your projects
+  %h2
+    News feed for all your projects
     
-#activities
-  = list_activities(@activities)
+  #activities
+    = list_activities(@activities)
+
+- else
+  #primer
+    %p= t('.primer.empty')
+    .box
+      %h2= link_to t('.primer.create_first'), new_project_path
+      %p= t '.primer.define1'
+      %p= t '.primer.define2'
+      %ol
+        %li= t '.primer.item1'
+        %li= t '.primer.item2'
+        %li= t '.primer.item3'
+        %li= t '.primer.item4'
+        %li= t '.primer.item5'
+      %p= t '.primer.footer' 
+
 
 - content_for :column do
   = new_project_link
