--- a/public/stylesheets/sass/primers.sass
+++ b/public/stylesheets/sass/primers.sass
@@ -12,12 +12,14 @@
     :padding 10px
     :border 1px rgb(220,220,150) solid
     h2
-      :margin-top 5px
+      :margin
+        :top 5px
+        :bottom 10px
       :text-align center
       a
         :color rgb(0,0,150)
         :text-decoration underline
-    ul
+    ul, ol
       :margin 5px 0 10px 0
       li
         :font-size 12px
