--- a/public/stylesheets/sass/welcome.sass
+++ b/public/stylesheets/sass/welcome.sass
@@ -1,6 +1,5 @@
 .welcome_users
   .content
-
     .section
       :padding
         :left 5px
@@ -11,8 +10,10 @@
         :font-size 18px
         :margin 0px
           :top 10px
+          :bottom 5px
       p
-        :font-size 14px
+        :font-size 12px
+        :margin-bottom 5px
     .welcome_section
       :border none
       h2
