--- a/app/views/users/welcome.haml
+++ b/app/views/users/welcome.haml
@@ -1,52 +1,43 @@
 .section.welcome_section
   %h2.welcome Get started with Teambox!
   %p
-    Thanks for signing up for Teambox! We've got a surprise for you...
+    You're our newest member! You'll soon see how Teambox can become your day's starting point.
+  %p 
+    Where can you go now? Create a project to <b>collaborate</b> or an agenda to <b>keep track of contacts</b>:
+    
 .section    
   %h2 Projects
   %p
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at eros ut est hendrerit aliquam eu in arcu. 
-    Praesent lobortis, nibh nec porttitor pellentesque, ligula arcu placerat erat, eu tempus quam lectus quis tortor. 
-    Praesent nec lectus suscipit magna interdum venenatis. Donec id neque libero. 
-.section
-  %h2 People
+    Share and collaborate with your team! Group twitter, conversations, tasks, pages and files.
   %p
-    Suspendisse iaculis mauris id justo sodales eget eleifend enim dictum. Phasellus vitae metus mauris. 
-    Sed eget metus est. Donec ut eros tortor. Suspendisse a accumsan elit.
-    Nunc semper quam eget elit eleifend ac malesuada massa interdum.
-.section
-  %h2 Comments
-  %p
-    Donec fringilla, arcu ac pharetra euismod, lacus quam luctus nunc, vel aliquet odio felis a velit. 
-    Donec sagittis, enim non venenatis malesuada, arcu est imperdiet eros, non posuere nulla justo sit amet mauris. 
-    Proin erat mauris, feugiat eu venenatis in, euismod in felis. 
-    Aenean orci augue, mollis at imperdiet a, eleifend non leo. In mattis hendrerit quam non venenatis.  
-.section
-  %h2 Conversations
-  %p  
-    Donec non libero eget nunc tincidunt suscipit vel in purus. Quisque urna erat, placerat a commodo sed, tincidunt sit amet lectus. 
-    Maecenas odio sem, ultricies nec aliquet sed, feugiat eget magna. Nulla sodales pharetra sollicitudin. 
-    Praesent pharetra bibendum rutrum. Ut ipsum nulla, commodo eu vulputate quis, congue quis felis. 
+    An event, a design, a product...
+    Go ahead and
+    = link_to "create your first project", new_project_path
+    now! 
 
 .section
-  %h2 Tasks
-  %p  
-    Etiam suscipit, nisi pellentesque viverra fringilla, neque nulla placerat nisl, eu suscipit orci ligula ut metus. 
-    Donec faucibus adipiscing turpis ac interdum. Curabitur non egestas leo. 
-    Fusce semper risus vel tellus ultricies ornare. Nulla nec lectus felis, quis luctus diam. Sed ante justo, euismod vel tempor nec, fermentum vel augue. 
-    Mauris lorem quam, rhoncus vitae vehicula sed, tincidunt vel odio.      
-.section
-  %h2 Pages
+  %h2 Agendas
   %p
-    Ut eu tortor mi, in mollis odio. Pellentesque dignissim laoreet tincidunt. 
-    Fusce consectetur leo ut nisl pellentesque sed dictum dolor commodo. Vestibulum leo risus, egestas eget lobortis ut, tincidunt eu arcu. 
-    Nam egestas mollis odio, vitae rhoncus sem ultrices sit amet. Donec condimentum vestibulum dignissim. 
-    Mauris faucibus hendrerit risus, accumsan pharetra nunc condimentum ut. In at vestibulum nisl. 
+    Keep track of your contacts and clients. Remember what was said. Follow-ups. Don't forget a date.
+  %p
+    = link_to "Create your first Agenda"
+    to become a better salesman. Take advantage of every opportunity.
+
 .section
-  %h2 File Uploads
-  %p    
-    Nam viverra bibendum turpis, eu auctor sapien fringilla quis. Suspendisse quis lacus nulla. Donec vitae orci dui, in consectetur leo. 
-    Phasellus venenatis congue suscipit. Nullam vestibulum, tortor a vehicula aliquet, quam turpis tristique mi, eget tristique velit sapien ut justo. 
-    Nunc vulputate leo vitae dui ultrices sed eleifend est ornare. 
+  %h2 Do you love us too?
+  %p
+    We've been working on Teambox for years, hoping it can be useful for you.
+    We're real people, motivated developers with a mission, just like you!
+  %p 
+    You can <b>help us</b> by telling your friends how you enjoy Teambox on
+    = link_to "Twitter,"
+    = link_to "Facebook"
+    or
+    = link_to "in your site!"
+  %p
+    If you enjoy using Teambox, also consider
+    = mail_to "telling us about it", "love@teambox.com"
+    in an email!
+
 - content_for :column do
   r
