--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -8,6 +8,8 @@ div.content_wrap
   :width 610px
   :padding 10px
     :right 0px
+  a
+    :text-decoration underline
   h2.title
     :margin 0px
       :bottom 3px
